// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker { selectedHour: 1, selectedMinute: 0 } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        1
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        0
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: 1, selectedMinute: 15 } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        1
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        15
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: 1, selectedMinute: undefined } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        1
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        mins
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: 12, selectedMinute: 0 } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        12
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        0
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: 12, selectedMinute: 15 } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        12
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        15
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: 12, selectedMinute: undefined } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        12
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        mins
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: undefined, selectedMinute: 0 } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        Hrs
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        0
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: undefined, selectedMinute: 15 } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
  background-color: #EDEDED;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        Hrs
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        15
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`TimePicker { selectedHour: undefined, selectedMinute: undefined } 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #E0E0E0;
  border-radius: 3px;
  cursor: pointer;
}

.emotion-9:not([disabled]):hover {
  background: #E0E0E0;
}

.emotion-4 {
  color: #6B7785;
  line-height: 40px;
}

.emotion-1 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 8px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  color: #6B7785;
  display: inline-block;
}

.emotion-2 {
  padding: 15px 20px;
  font-size: 12px;
  color: #101721;
  line-height: 9px;
}

.emotion-0 {
  margin-right: 15px;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="hour-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        Hrs
      </span>
      <span>
        <i
          className="pi pi-arrow-drop-down emotion-1"
          style={
            Object {
              "transform": "none",
            }
          }
        />
      </span>
    </div>
  </div>
  <span
    className="emotion-4"
  >
    :
  </span>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
      data-test-id="minute-label"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
      >
        mins
      </span>
      <i
        className="pi pi-arrow-drop-down emotion-1"
        style={
          Object {
            "transform": "none",
          }
        }
      />
    </div>
  </div>
</div>
`;
